apps/soap-external-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soap-example
  labels:
    app.kubernetes.io/part-of: soap-example
    shared-gateway-access: "true"
