apps/soap-external-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soap-example
  namespace: soap-example
  labels:
    app: soap-example
    app.kubernetes.io/part-of: soap-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soap-example
  template:
    metadata:
      labels:
        app: soap-example
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      containers:
        - name: soap-example
          image: quay.io/nlembers/soap-example:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
