apps/soap-external-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soap-example
  namespace: soap-example
  labels:
    app: soap-example
    app.kubernetes.io/part-of: soap-example
spec:
  selector:
    app: soap-example
  ports:
    - name: http
      port: 80
      targetPort: 8080
