apps/soap-external-service/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soap-example
  namespace: soap-example
  labels:
    app.kubernetes.io/part-of: soap-example
spec:
  parentRefs:
    - name: api-gateway
      namespace: openshift-ingress
  hostnames:
    - soap-example.${CLUSTER_DOMAIN}
  rules:
    - backendRefs:
        - name: soap-example
          port: 80
